--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.github.thiagolocatelli</groupId>
+	<groupId>com.github.giamat86</groupId>
 	<artifactId>parse4j</artifactId>
 	<version>1.5-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>parse4j</name>
-	<url>https://github.com/thiagolocatelli/parse4j</url>
+	<url>https://github.com/giamat86/parse4j</url>
 
 	<parent>
 		<groupId>org.sonatype.oss</groupId>
@@ -36,16 +36,16 @@
 	</contributors>
 
 	<scm>
-		<connection>scm:git:git@github.com:thiagolocatelli/parse4j.git</connection>
-		<developerConnection>scm:git:git@github.com:thiagolocatelli/parse4j.git</developerConnection>
-		<url>git@github.com:thiagolocatelli/parse4j.git</url>
+		<connection>scm:git:git@github.com:giamat86/parse4j.git</connection>
+		<developerConnection>scm:git:git@github.com:giamat86/parse4j.git</developerConnection>
+		<url>git@github.com:giamat86/parse4j.git</url>
 	</scm>
 
 	<properties>
 		<maven.test.skip>true</maven.test.skip>
 		<maven.test.failure.ignore>false</maven.test.failure.ignore>
 		<maven.test.error.ignore>false</maven.test.error.ignore>
-		<java.version>1.6</java.version>
+		<java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
@@ -121,8 +121,8 @@
 					<version>3.1</version>
 					<configuration>
 						<encoding>UTF-8</encoding>
-						<source>1.6</source>
-						<target>1.6</target>
+						<source>1.8</source>
+						<target>1.8</target>
 					</configuration>
 				</plugin>
 			</plugins>
@@ -148,8 +148,8 @@
 							<version>3.1</version>
 							<configuration>
 								<encoding>UTF-8</encoding>
-								<source>1.6</source>
-								<target>1.6</target>
+								<source>1.8</source>
+								<target>1.8</target>
 							</configuration>
 						</plugin>
 						<plugin>
